[package]
name = "hyde"
version = "0.1.0"
edition = "2021"

[dependencies]
hyde_lib = { path = "hyde_lib" }
clap = { version = "*", features = [ "derive", "env" ] }
clap_complete = "*"
notify = "*"
axum = "*"
tower-http = { version = "*", features = [ "fs" ] }
tower-livereload = "*"
tokio = { version = "*", features = [ "full" ] }

[workspace]
members = [ "hyde_lib" ]

[profile.release]
lto = true
