[package]
name = "jake"
version = "0.1.0"
edition = "2021"

[dependencies]
jake_lib = { path = "jake_lib" }
clap = { version = "*", features = [ "derive", "env" ] }
clap_complete = "*"
notify = "*"
axum = "*"
tower-http = { version = "*", features = [ "fs" ] }
tower-livereload = "*"
tokio = { version = "*", features = [ "full" ] }

[workspace]
members = [ "jake_lib" ]

[profile.release]
lto = true

[profile.profiling]
inherits = "release"
debug = true
