[package]
name = "jake"
version = "0.1.0"
edition = "2021"

[dependencies]
jake_lib = { path = "jake_lib" }
clap = { version = "4.5.24", features = [ "derive", "env" ] }
clap_complete = "4.5.41"
notify = "7.0.0"
axum = "0.8.1"
tower-http = { version = "0.6.2", features = [ "fs" ] }
tower-livereload = "0.9.5"
tokio = { version = "1.43.0", features = [ "full" ] }
iter_tools = "*"

[workspace]
members = [ "jake_lib" ]

[profile.release]
lto = true

[profile.profiling]
inherits = "release"
debug = true
