[package]
name = "jake_lib"
version = "0.1.0"
edition = "2021"

[dependencies]
relative-path = { version = "1.9.3", features = [ "serde" ] }
serde = "1.0.200"
serde_yaml = "0.9.34"
serde_json = "1.0.135"
# minify-html = "*"
# lol_html = "*"
walkdir = "2.5.0"
globset = { version = "0.4.15", features = [ "serde1" ] }
markdown = "1.0.0-alpha.21"
grass = { version = "0.13.4", default-features = false }
liquid = "0.26.9"
kstring = { version = "2.0.2", features = [ "serde" ] }
liquid-core = "0.26.9"
mlua = { version = "0.10.2", features = [ "luajit", "serialize", "send", "userdata-wrappers" ] }
